# VigenereCipher

./: CMakeLists.txt  README.md  data.txt  dictionaryEnglish.txt
inc/: alphabet.h  errors.h
src/: VigenereCipher.c  language.c
